# leet-code

./: 1295. Find Numbers with Even Number of Digits  1295. Find Numbers with Even Number of Digits   213. House Robber 2  2302. Count Subarrays With Score Less Than K  2962. Count Subarrays Where Max Element Appears at Least K Times  CMakeLists.txt  README.md  candy  count_subarr_with_cond  count_subarr_with_f_bounds  odoo
daily_q/: 1007. Minimum Domino Rotations For Equal Row.cpp  1061. Lexicographically Smallest Equivalent String.cpp  1128. Number of Equivalent Domino Pairs.cpp  1295. Find Numbers with Even Number of Digits.cpp  1298. Maximum Candies You Can Get from Boxes.cpp  135. Candy.cpp  1432. Max Difference You Can Get From Changing an Integer.cpp  1550. Three Consecutive Odds.cpp  1857. Largest Color Value in a Directed Graph.cpp  1920. Build Array from Permutation.cpp  1931. Painting a Grid With Three Different Colors.cpp  2016. Maximum Difference Between Increasing Elements.cpp  2071. Maximum Number of Tasks You Can Assign.cpp  2081. Sum of k-Mirror Numbers.cpp  2094. Finding 3-Digit Even Numbers.cpp  2131. Longest Palindrome by Concatenating Two Letter Words.cpp  2138. Divide a String Into Groups of Size k.cpp  2200. Find All K-Distant Indices in an Array.cpp  2294. Partition Array Such That Maximum Difference Is K.cpp  2302. Count Subarrays With Score Less Than K.cpp  2359. Find Closest Node to Given Two Nodes.cpp  2434. Using a Robot to Print the Lexicographically Smallest String.cpp  2566. Maximum Difference by Remapping a Digit.cpp  2683. Neighboring Bitwise XOR.cpp  2894. Divisible and Non-divisible Sums Difference.cpp  2900. Longest Unequal Adjacent Groups Subsequence I.cpp  2901. Longest Unequal Adjacent Groups Subsequence II.cpp  2918. Minimum Equal Sum of Two Arrays After Replacing Zeros.cpp  2929. Distribute Candies Among Children II.cpp  2942. Find Words Containing Character.cpp  2962. Count Subarrays Where Max Element Appears at Least K Times.cpp  2966. Divide Array Into Arrays With Max Difference.cpp  3024. Type of Triangle.cpp  3068. Find the Maximum Sum of Node Values.cpp  3085. Minimum Deletions to Make String K-Special.cpp  3170. Lexicographically Minimum String After Removing Stars.cpp  3335. Total Characters in String After Transformations I.cpp  3337. Total Characters in String After Transformations II.cpp  3341. Find Minimum Time to Reach Last Room I.cpp  3342. Find Minimum Time to Reach Last Room II.cpp  (+19 more)
top_interview_150/: 1. Two Sum.cpp  1368. Minimum Cost to Make at Least One Valid Path in a Grid.cpp  208. Implement Trie (Prefix Tree).cpp  211. Design Add and Search Words Data Structure.cpp  213. House Robber 2 DP.cpp  213. House Robber 2.cpp  3. Longest Substring Without Repeating Characters.cpp  4. Median of Two Sorted Arrays.cpp  41. First Missing Positive.cpp  416. Partition Equal Subset Sum.cpp  479. Largest Palindrome Product.cpp  658. Find K Closest Elements.cpp  candy.cpp  count_say.cpp  merge_arr.cpp  rem_el.cpp
