cmake_minimum_required(VERSION 3.29)
project(leet_code_sol_cpp)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

message(STATUS "CMAKE_BINARY_DIR is: ${CMAKE_BINARY_DIR}")

add_executable(merge_arr top_interview_150/merge_arr.cpp)
add_executable(rem_el top_interview_150/rem_el.cpp)
add_executable(candy top_interview_150/candy.cpp)
add_executable(count_say top_interview_150/count_say.cpp)
add_executable(count_subarr daily_q/count_subarr_with_f_bounds.cpp)
add_executable(count_subarr_with_cond daily_q/count_subarr_with_cond.cpp)
add_executable(house_robber top_interview_150/213.\ House\ Robber\ 2.cpp)
add_executable(count_subarrays_with_score_less_than_k daily_q/2302.\ Count\ Subarrays\ With\ Score\ Less\ Than\ K.cpp)
add_executable(count_subarrays_where_max_k daily_q/2962.\ Count\ Subarrays\ Where\ Max\ Element\ Appears\ at\ Least\ K\ Times.cpp)
add_executable(even_number_of_digits daily_q/1295.\ Find\ Numbers\ with\ Even\ Number\ of\ Digits.cpp)
add_executable(maximum_num_of_tasks daily_q/2071.\ Maximum\ Number\ of\ Tasks\ You\ Can\ Assign.cpp)
add_executable(push_dominoes daily_q/838.\ Push\ Dominoes.cpp)
add_executable(minimum_domino_rot daily_q/1007.\ Minimum\ Domino\ Rotations\ For\ Equal\ Row.cpp)
add_executable(domino_and_tromino daily_q/790.\ Domino\ and\ Tromino\ Tiling.cpp)
add_executable(domino_and_equivalent daily_q/1128.\ Number\ of\ Equivalent\ Domino\ Pairs.cpp)
add_executable(build_arr_from_perm daily_q/1920.\ Build\ Array\ from\ Permutation.cpp)
add_executable(find_min_time_to_reach_room daily_q/3341.\ Find\ Minimum\ Time\ to\ Reach\ Last\ Room\ I.cpp)
add_executable(find_min_time_to_each_room2 daily_q/3342.\ Find\ Minimum\ Time\ to\ Reach\ Last\ Room\ II.cpp)
add_executable(house_robber_2_dp top_interview_150/213.\ House\ Robber\ 2\ DP.cpp)
add_executable(count_numb_balnc_perm daily_q/3343.\ Count\ Number\ of\ Balanced\ Permutations.cpp)
add_executable(min_equal_sum_of_two_arr daily_q/2918.\ Minimum\ Equal\ Sum\ of\ Two\ Arrays\ After\ Replacing\ Zeros.cpp)
add_executable(part_equal_subset top_interview_150/416.\ Partition\ Equal\ Subset\ Sum.cpp)
add_executable(three_consecutive_odds daily_q/1550.\ Three\ Consecutive\ Odds.cpp)
add_executable(two_sum top_interview_150/1.\ Two\ Sum.cpp)
add_executable(design_search_data_struct top_interview_150/211.\ Design\ Add\ and\ Search\ Words\ Data\ Structure.cpp)
add_executable(prefix_impl top_interview_150/208.\ Implement\ Trie\ \(Prefix\ Tree\).cpp)
add_executable(finding_3digit_even_num daily_q/2094.\ Finding\ 3-Digit\ Even\ Numbers.cpp)
add_executable(total_char_after_trans1 daily_q/3335.\ Total\ Characters\ in\ String\ After\ Transformations\ I.cpp)
add_executable(total_char_after_trans2 daily_q/3337.\ Total\ Characters\ in\ String\ After\ Transformations\ II.cpp)
add_executable(longest_uneq_adjanc_group1 daily_q/2900.\ Longest\ Unequal\ Adjacent\ Groups\ Subsequence\ I.cpp)