cmake_minimum_required(VERSION 3.29)
project(leet_code_sol_cpp)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

message(STATUS "CMAKE_BINARY_DIR is: ${CMAKE_BINARY_DIR}")

add_executable(2200_find_all_k_dst_ind_arr daily_q/2200.\ Find\ All\ K-Distant\ Indices\ in\ an\ Array.cpp)
add_executable(2081_sum_k_mirr_nums daily_q/2081.\ Sum\ of\ k-Mirror\ Numbers.cpp)
add_executable(3085_min_del_mak_str_k_spec daily_q/3085.\ Minimum\ Deletions\ to\ Make\ String\ K-Special.cpp)
add_executable(2138_div_str_group_k daily_q/2138.\ Divide\ a\ String\ Into\ Groups\ of\ Size\ k.cpp)
add_executable(3443_max_manh_dist_aft_k_chn daily_q/3443.\ Maximum\ Manhattan\ Distance\ After\ K\ Changes.cpp)
add_executable(2294_part_arr_max_diff_is_k daily_q/2294.\ Partition\ Array\ Such\ That\ Maximum\ Difference\ Is\ K.cpp)
add_executable(2966_div_arr_into_arr_max_diff daily_q/2966.\ Divide\ Array\ Into\ Arrays\ With\ Max\ Difference.cpp)
add_executable(3405_count_num_of_arr_k_match_el daily_q/3405.\ Count\ the\ Number\ of\ Arrays\ with\ K\ Matching\ Adjacent\ Elements.cpp)
add_executable(1368_min_cost_to_make_val_path top_interview_150/1368.\ Minimum\ Cost\ to\ Make\ at\ Least\ One\ Valid\ Path\ in\ a\ Grid.cpp)
add_executable(2016_max_diff_bet_incr_ele daily_q/2016.\ Maximum\ Difference\ Between\ Increasing\ Elements.cpp)
add_executable(2683_neigh_bit_xor daily_q/2683.\ Neighboring\ Bitwise\ XOR.cpp)
add_executable(1432_max_diff_can_get daily_q/1432.\ Max\ Difference\ You\ Can\ Get\ From\ Changing\ an\ Integer.cpp)
add_executable(2566_max_diff_remp_dig daily_q/2566.\ Maximum\ Difference\ by\ Remapping\ a\ Digit.cpp)
add_executable(2616_min_max_diff_pairs daily_q/2616.\ Minimize\ the\ Maximum\ Difference\ of\ Pairs.cpp)
add_executable(479_larg_palind_prod top_interview_150/479.\ Largest\ Palindrome\ Product.cpp)
add_executable(3423_max_diff_betw_adj_el daily_q/3423.\ Maximum\ Difference\ Between\ Adjacent\ Elements\ in\ a\ Circular\ Array.cpp)
add_executable(max_diff_bet_even_odd daily_q/3442.\ Maximum\ Difference\ Between\ Even\ and\ Odd\ Frequency\ I.cpp)
add_executable(small_in_lex_ord daily_q/440.\ K-th\ Smallest\ in\ Lexicographical\ Order.cpp)
add_executable(lex_nums daily_q/386.\ Lexicographical\ Numbers.cpp)
add_executable(lex_min_str_after_rem_stars daily_q/3170.\ Lexicographically\ Minimum\ String\ After\ Removing\ Stars.cpp)
add_executable(using_rob_to_pri_lex_sm_str daily_q/2434.\ Using\ a\ Robot\ to\ Print\ the\ Lexicographically\ Smallest\ String.cpp)
add_executable(lexic_small_equi_str daily_q/1061.\ Lexicographically\ Smallest\ Equivalent\ String.cpp)
add_executable(find_the_lex_larg_str1 daily_q/3403.\ Find\ the\ Lexicographically\ Largest\ String\ From\ the\ Box\ I.cpp)
add_executable(max_candies_can_get daily_q/1298.\ Maximum\ Candies\ You\ Can\ Get\ from\ Boxes.cpp)
add_executable(candy_q daily_q/135.\ Candy.cpp)
add_executable(merge_arr top_interview_150/merge_arr.cpp)
add_executable(rem_el top_interview_150/rem_el.cpp)
add_executable(candy top_interview_150/candy.cpp)
add_executable(med_two_sort_arr top_interview_150/4.\ Median\ of\ Two\ Sorted\ Arrays.cpp)
add_executable(count_say top_interview_150/count_say.cpp)
add_executable(count_subarr daily_q/count_subarr_with_f_bounds.cpp)
add_executable(count_subarr_with_cond daily_q/count_subarr_with_cond.cpp)
add_executable(house_robber top_interview_150/213.\ House\ Robber\ 2.cpp)
add_executable(count_subarrays_with_score_less_than_k daily_q/2302.\ Count\ Subarrays\ With\ Score\ Less\ Than\ K.cpp)
add_executable(count_subarrays_where_max_k daily_q/2962.\ Count\ Subarrays\ Where\ Max\ Element\ Appears\ at\ Least\ K\ Times.cpp)
add_executable(even_number_of_digits daily_q/1295.\ Find\ Numbers\ with\ Even\ Number\ of\ Digits.cpp)
add_executable(maximum_num_of_tasks daily_q/2071.\ Maximum\ Number\ of\ Tasks\ You\ Can\ Assign.cpp)
add_executable(push_dominoes daily_q/838.\ Push\ Dominoes.cpp)
add_executable(minimum_domino_rot daily_q/1007.\ Minimum\ Domino\ Rotations\ For\ Equal\ Row.cpp)
add_executable(domino_and_tromino daily_q/790.\ Domino\ and\ Tromino\ Tiling.cpp)
add_executable(domino_and_equivalent daily_q/1128.\ Number\ of\ Equivalent\ Domino\ Pairs.cpp)
add_executable(build_arr_from_perm daily_q/1920.\ Build\ Array\ from\ Permutation.cpp)
add_executable(snakes_and_ladders daily_q/909.\ Snakes\ and\ Ladders.cpp)
add_executable(find_min_time_to_reach_room daily_q/3341.\ Find\ Minimum\ Time\ to\ Reach\ Last\ Room\ I.cpp)
add_executable(find_min_time_to_each_room2 daily_q/3342.\ Find\ Minimum\ Time\ to\ Reach\ Last\ Room\ II.cpp)
add_executable(house_robber_2_dp top_interview_150/213.\ House\ Robber\ 2\ DP.cpp)
add_executable(count_numb_balnc_perm daily_q/3343.\ Count\ Number\ of\ Balanced\ Permutations.cpp)
add_executable(min_equal_sum_of_two_arr daily_q/2918.\ Minimum\ Equal\ Sum\ of\ Two\ Arrays\ After\ Replacing\ Zeros.cpp)
add_executable(part_equal_subset top_interview_150/416.\ Partition\ Equal\ Subset\ Sum.cpp)
add_executable(three_consecutive_odds daily_q/1550.\ Three\ Consecutive\ Odds.cpp)
add_executable(two_sum top_interview_150/1.\ Two\ Sum.cpp)
add_executable(design_search_data_struct top_interview_150/211.\ Design\ Add\ and\ Search\ Words\ Data\ Structure.cpp)
add_executable(prefix_impl top_interview_150/208.\ Implement\ Trie\ \(Prefix\ Tree\).cpp)
add_executable(finding_3digit_even_num daily_q/2094.\ Finding\ 3-Digit\ Even\ Numbers.cpp)
add_executable(total_char_after_trans1 daily_q/3335.\ Total\ Characters\ in\ String\ After\ Transformations\ I.cpp)
add_executable(total_char_after_trans2 daily_q/3337.\ Total\ Characters\ in\ String\ After\ Transformations\ II.cpp)
add_executable(longest_uneq_adjanc_group1 daily_q/2900.\ Longest\ Unequal\ Adjacent\ Groups\ Subsequence\ I.cpp)
add_executable(long_palindr_by_concat daily_q/2131.\ Longest\ Palindrome\ by\ Concatenating\ Two\ Letter\ Words.cpp)
add_executable(larg_color_val_in_graph daily_q/1857.\ Largest\ Color\ Value\ in\ a\ Directed\ Graph.cpp)
add_executable(div_and_non_div_sums daily_q/2894.\ Divisible\ and\ Non-divisible\ Sums\ Difference.cpp)
add_executable(find_k_closest_els top_interview_150/658.\ Find\ K\ Closest\ Elements.cpp)
add_executable(long_str_no_reap_char top_interview_150/3.\ Longest\ Substring\ Without\ Repeating\ Characters.cpp)
add_executable(max_num_nods_conn1 daily_q/3372.\ Maximize\ the\ Number\ of\ Target\ Nodes\ After\ Connecting\ Trees\ I.cpp)
add_executable(max_num_nods_conn2 daily_q/3373.\ Maximize\ the\ Number\ of\ Target\ Nodes\ After\ Connecting\ Trees\ II.cpp)
add_executable(find_clos_node_to_give daily_q/2359.\ Find\ Closest\ Node\ to\ Given\ Two\ Nodes.cpp)
add_executable(distr_cand_among_chil daily_q/2929.\ Distribute\ Candies\ Among\ Children\ II.cpp)
add_executable( 3445_max_diff_even_odd daily_q/3445.\ Maximum\ Difference\ Between\ Even\ and\ Odd\ Frequency\ II.cpp)